# blog_source

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Justfile  README.md  add_extras_pelican-plugins.sh  add_extras_pelican-themes.sh  biome.json  bootstrap.sh  deploy.sh  mermaid.config.json  package.json  pelicanconf.py  publish.sh  publishconf.py  punch_version.py  puppeteer.json  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: deploy.yml  lint.yml  performance.yml  preview.yml
content/: developpement-blog-plan-future-posts.md  developpement-grpc-pyconfr.md  hobbies-blog-plan-future-post.md  modernisation-blog-pelican-2026-en.md  modernisation-blog-pelican-2026.md  plan-future-posts-developpement-en.md  plan-future-posts-hobbies-en.md  pyconfr-2019-grpc-python-en.md  python-helloworld-en.md  python-helloworld-repl.it.md  python-helloworld-replit-en.md  python-helloworld.md  suckless-ogl-anatomie-frame-en.md  suckless-ogl-anatomie-frame.md
content/css/: custom.css  glossary-tooltip.css  mermaid-dark.css
content/js/: glossary-tooltip.js  mermaid-init.js
content/python/: helloworld.py
docs/: mermaid-handdrawn-refactoring.md  performance-optimization.md  webp-optimization.md
pelican/: pelicanconf.py  publishconf.py
pelican/content/: blog-plan-future-posts.md  developpement-blog-plan-future-posts.md  developpement-grpc-pyconfr.md  python-helloworld.md
plugins/: css_js_injector.py  html_optimizer.py  lazy_images.py  mermaid_prerender.py
scripts/: lighthouse-audit.sh
templates/partial/: nav.html
