[tool.poetry]
name = "blog_source"
version = "0.1.0"
description = ""
authors = ["ATTY Lionel <yoyonel@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pelican = "^4.5.0"
Markdown = "^2.3.9"
"punch.py" = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
