[tool.poetry]
name = "blog_source"
version = "0.1.0"
description = ""
authors = ["ATTY Lionel <yoyonel@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pelican = "^4.5.0"
"punch.py" = "^2.0.0"
markdown = ">=3.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
